--- a/public/principal.html
+++ b/public/principal.html
@@ -2,9 +2,26 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Alura Typer</title>
+    <title>Game Typer</title>
 </head>
 <body>
-    <!-- Seja bem vindo ao curso de jQuery :) -->
+
+    <h1>Game Typer</h1>
+    <p id="frase">Essa frase hi ik jk tem cinco palavras</p>
+
+    <ul class="informacoes">
+        <li><span id="tamanho-frase">0</span> palavras</li>
+        <li><span id="tempo-digitacao">3</span> segundos</li>
+    </ul>
+
+    <textarea id="campo-digitacao" rows="8" cols="80"></textarea>
+
+    <ul>
+        <li><span id="contador-caracteres">0</span> caracteres</li>
+        <li><span id="contador-palavras">0</span> palavras</li>
+    </ul>
+
+<script src="js/jquery.js" ></script><!-- importante importar antes -->
+<script src="js/main.js"></script>
 </body>
 </html>
