--- a/public/principal.html
+++ b/public/principal.html
@@ -15,6 +15,7 @@
     </ul>
 
     <textarea id="campo-digitacao" rows="8" cols="80"></textarea>
+    <button id="botao-reiniciar">Reiniciar Jogo</button>
 
     <ul>
         <li><span id="contador-caracteres">0</span> caracteres</li>
