--- a/public/principal.html
+++ b/public/principal.html
@@ -44,7 +44,8 @@
                 <thead>
                     <tr>
                         <th>Usuário</th>
-                        <th>No. de palavras</th>
+                        <th>Nº de palavras</th>
+                        <th>Remover</th>
                     </tr>
                 </thead>
                 <tbody></tbody>
