--- a/public/principal.html
+++ b/public/principal.html
@@ -31,6 +31,12 @@
             <a id="botao-reiniciar" class="btn-floating btn-large waves-effect waves-light red">
                 <i class="material-icons">restore</i>
             </a>
+            <a id="botao-placar" class="btn-floating btn-large waves-effect waves-light green">
+                <i class="material-icons">assignment</i>
+            </a>
+            <a id="botao-frase" class="btn-floating btn-large waves-effect waves-light blue">
+               <i class="material-icons">shuffle</i>
+           </a>
         </div>
 
         <ul class="center" >
@@ -38,7 +44,7 @@
             <li><span id="contador-palavras">0</span> palavras</li>
         </ul>
 
-        <section class="placar">
+        <section class=" invisivel placar">
             <h3 class="center">Placar</h3>
             <table class="centered bordered">
                 <thead>
