frases doaletorias no servido, atualizando tempo e qtd de palavras

--- a/public/principal.html
+++ b/public/principal.html
@@ -12,7 +12,12 @@
 
     <div class="container" >
         <h1 class="center" >Game Typer</h1>
-        <p class="center" id="frase">Essa frase tem cinco palavras</p>
+
+        <br>
+
+        <p class="center" id="frase">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ex justo, fringilla non nisl at, luctus malesuada mauris.</p>
+
+        <br>
 
         <ul class="informacoes center">
             <li>
@@ -21,7 +26,7 @@
             </li>
             <li>
                 <i class="small material-icons icones">query_builder</i>
-                <span id="tempo-digitacao">3</span> segundos
+                <span id="tempo-digitacao">10</span> segundos
             </li>
         </ul>
 
