exibindo erro caso falhe a requisição

--- a/public/principal.html
+++ b/public/principal.html
@@ -13,6 +13,10 @@
     <div class="container" >
         <h1 class="center" >Game Typer</h1>
 
+        <div class="center">
+            <p id="erro">Ocorreu um erro, por favor tente novamente!</p>
+        </div>
+
         <br>
 
         <p class="center" id="frase">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ex justo, fringilla non nisl at, luctus malesuada mauris.</p>
