--- a/public/principal.html
+++ b/public/principal.html
@@ -20,6 +20,9 @@
         <br>
 
         <p class="center" id="frase">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ex justo, fringilla non nisl at, luctus malesuada mauris.</p>
+        <div class="center">
+            <img src="img/spinner.gif" alt="Spinner" id="spinner">
+        </div>
 
         <br>
 
@@ -46,7 +49,11 @@
             <a id="botao-frase" class="btn-floating btn-large waves-effect waves-light blue">
                <i class="material-icons">shuffle</i>
            </a>
+           <a id="botao-frase-id" class="btn-floating btn-large waves-effect waves-light cyan">
+                <i class="material-icons">repeat_one</i>
+            </a><input placeholder="ID da frase" type="number" min="0" id="frase-id">
         </div>
+        <br>
 
         <ul class="center" >
             <li><span id="contador-caracteres">0</span> caracteres</li>
