--- a/public/principal.html
+++ b/public/principal.html
@@ -19,7 +19,7 @@
 
         <br>
 
-        <p class="center" id="frase">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ex justo, fringilla non nisl at, luctus malesuada mauris.</p>
+        <p class="center noSeletor" id="frase">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ex justo, fringilla non nisl at, luctus malesuada mauris.</p>
         <div class="center">
             <img src="img/spinner.gif" alt="Spinner" id="spinner">
         </div>
@@ -29,7 +29,7 @@
         <ul class="informacoes center">
             <li>
                  <i class="small material-icons icones">description</i>
-                <span id="tamanho-frase">0</span> palavras
+                <span id="tamanho-frase">0</span> caracteres
             </li>
             <li>
                 <i class="small material-icons icones">query_builder</i>
@@ -52,12 +52,15 @@
            <a id="botao-frase-id" class="btn-floating btn-large waves-effect waves-light cyan">
                 <i class="material-icons">repeat_one</i>
             </a><input placeholder="ID da frase" type="number" min="0" id="frase-id">
+            <a id="botao-sync" class="btn-floating btn-large waves-effect waves-light yellow">
+                <i class="material-icons">swap_vert</i>
+            </a>
         </div>
         <br>
 
         <ul class="center" >
             <li><span id="contador-caracteres">0</span> caracteres</li>
-            <li><span id="contador-palavras">0</span> palavras</li>
+            <!-- <li><span id="contador-palavras">0</span> palavras</li> -->
         </ul>
 
         <section class=" invisivel placar">
@@ -66,7 +69,7 @@
                 <thead>
                     <tr>
                         <th>Usuário</th>
-                        <th>Nº de palavras</th>
+                        <th>Pontuação</th>
                         <th>Remover</th>
                     </tr>
                 </thead>
