--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 
     <div class="container" >
         <h1 class="center" >Game Typer</h1>
+        <h2 class="center">Por Beatriz Felix</h2>
 
         <div class="center">
             <p id="erro">Ocorreu um erro, por favor tente novamente!</p>
