--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/libs/materialize.min.css" ></link>
     <link rel="stylesheet" href="css/libs/google-fonts.css">
     <link rel="stylesheet" href="css/libs/selectize.default.css">
+    <link rel="stylesheet" href="css/libs/tooltipster.bundle.min.css">
     <link rel="stylesheet" href="css/estilos.css" ></link>
 </head>
 <body>
@@ -55,7 +56,7 @@
                 <i class="material-icons">repeat_one</i>
             </a><input placeholder="ID da frase" type="number" min="0" id="frase-id">
 
-            <a id="botao-sync" class="btn-floating btn-large waves-effect waves-light yellow">
+            <a id="botao-sync" title="Nada para sincronizar"  class=" tooltip  btn-floating btn-large waves-effect waves-light yellow">
                 <i class="material-icons">swap_vert</i>
             </a>
         </div>
@@ -64,7 +65,7 @@
         <div class="center" >
             <div class="select-usuarios">
              <select id="usuarios">
-                <option value="default">Digite seu usuário aqui...</option>
+                <option value="default">Digite seu user aqui</option>
              </select>
             </div>
         </div>
@@ -93,5 +94,6 @@
 <script src="js/jquery.js" ></script><!-- importante importar antes -->
 <script src="js/main.js"></script>
 <script src="js/selectize.js"></script>
+<script src="js/tooltipster.bundle.min.js"></script>
 </body>
 </html>
