--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,35 @@
+<!--
+Feito por Beatriz Felix
+beatrizfelix@aluno.fapce.edu.br
+(88) 9 9462 - 5763
+Crato, Ceará - Brasil
+-->
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Typer</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/libs/materialize.min.css" ></link>
     <link rel="stylesheet" href="css/libs/google-fonts.css">
     <link rel="stylesheet" href="css/libs/selectize.default.css">
     <link rel="stylesheet" href="css/libs/tooltipster.bundle.min.css">
     <link rel="stylesheet" href="css/estilos.css" ></link>
+    <meta name="author" content="beatrizfelix@aluno.fapce.edu.br">
 </head>
 <body>
 
     <div class="container" >
-        <h1 class="center" >Game Typer</h1>
-        <h2 class="center">Por Beatriz Felix</h2>
+        <h1 class="center">
+            Game Typer
+        </h1>
+        <p id="my-info" class="center" >
+            por Beatriz Felix
+            <a href="https://github.com/beatrizf13" target=")_blank" >
+                <i class="fa fa-github" aria-hidden="true"></i>
+            </a>
+        </p>
 
         <div class="center">
             <p id="erro">Ocorreu um erro, por favor tente novamente!</p>
