--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@ Crato, Ceará - Brasil
     <link rel="stylesheet" href="css/libs/tooltipster.bundle.min.css">
     <link rel="stylesheet" href="css/estilos.css" ></link>
     <meta name="author" content="beatrizfelix@aluno.fapce.edu.br">
+
+
 </head>
 <body>
 
@@ -51,7 +53,7 @@ Crato, Ceará - Brasil
             </li>
             <li>
                 <i class="small material-icons icones">query_builder</i>
-                <span id="tempo-digitacao">10</span> segundos
+                <span id="tempo-digitacao">15</span> segundos
             </li>
         </ul>
 
@@ -92,7 +94,7 @@ Crato, Ceará - Brasil
 
         <section class=" invisivel placar">
             <h3 class="center">Placar</h3>
-            <table class="centered bordered">
+            <table id="tablePlacar" class="centered bordered">
                 <thead>
                     <tr>
                         <th>Usuário</th>
